Installs jeet and uses it on the POI page

--- a/client/app/index.scss
+++ b/client/app/index.scss
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Arimo:400,700,400italic);
+@import 'client/bower_components/jeet/scss/jeet/index';
 
 // ------------------------------------------------
 // COLORS
