--- a/client/app/points/points/points.scss
+++ b/client/app/points/points/points.scss
@@ -1,7 +1,11 @@
 .points-grid {
-  
+  @include column(2/3);
   .point-card {
     display: inline-block;
     margin: $base-spacing;
   }
+}
+
+.points-form {
+  @include column(1/3);
 }
