Add barebones Map page template

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -2,5 +2,6 @@
   <ul>
     <li><a ng-href='#/'>Home</a></li>
     <li><a ng-href='#/points'>Points of Interest</a></li>
+    <li><a ng-href='#/map'>Overworld Map</a></li>
   </ul>
 </nav>
