--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,7 +1,19 @@
 <nav class="nav">
   <ul>
-    <li><a ng-href='#/'>Home</a></li>
-    <li><a ng-href='#/points'>Points of Interest</a></li>
-    <li><a ng-href='#/map'>Overworld Map</a></li>
+    <li>
+      <a class="nav__logo" href="#/">
+        Smashing Bloxes
+      </a>
+    </li>
+    <li>
+      <a ng-href="#/points">
+        Points of Interest
+      </a>
+    </li>
+    <li>
+      <a ng-href="#/map">
+        Overworld Map
+      </a>
+    </li>
   </ul>
 </nav>
